增加修改AppId入口

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,5 +19,6 @@ android {
 }
 
 dependencies {
-    api project (':weixinlib')
+    api project(':weixinlib')
+    // implementation 'com.github.sayhellotogithub:WeiXinShare:v1.0.0'
 }
